<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="IO" Id="{4ac33725-9092-434f-9467-6ea6c6e5843d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	BOX_IN AT%I*: 		ARRAY[1..8] OF BOOL;
	BOX_OUT AT%Q*:		ARRAY[1..8] OF BOOL;
	
	EthercatDevState 	AT%I*: UINT;
	EthercatDevCtrl 	AT%Q*: UINT;
	Term1DevState 		AT%I*: UINT;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>