<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FBD_Devices" Id="{5015793d-548e-4713-ad62-be76714ca000}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM FBD_Devices
VAR
	fbButtonBox: FB_ButtonBox;
	fbMotorControl: FB_MotorControl;
END_VAR
]]></Declaration>
    <Implementation>
      <NWL>
        <XmlArchive>
          <Data>
            <o xml:space="preserve" t="NWLImplementationObject">
              <v n="NetworkListComment">""</v>
              <v n="DefaultViewMode">"Fbd"</v>
              <l2 n="NetworkList" cet="Network">
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" cet="BoxTreeBox">
                    <o>
                      <v n="BoxType">"FB_MotorControl"</v>
                      <o n="Instance" t="Operand">
                        <v n="Operand">"fbMotorControl"</v>
                        <v n="Type">"FB_MotorControl"</v>
                        <v n="Comment">""</v>
                        <v n="SymbolComment">""</v>
                        <v n="Address">""</v>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <v n="LValue">false</v>
                        <v n="Boolean">false</v>
                        <v n="IsInstance">true</v>
                        <v n="Id">178L</v>
                      </o>
                      <o n="OutputItems" t="OutputItemList">
                        <l2 n="OutputItems" cet="Operand">
                          <n />
                          <o>
                            <v n="Operand">"OUT.EK_OUT[1]"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">180L</v>
                          </o>
                          <o>
                            <v n="Operand">"OUT.EK_OUT[3]"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">181L</v>
                          </o>
                          <o>
                            <v n="Operand">"OUT.EK_OUT[4]"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">182L</v>
                          </o>
                          <o>
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">122L</v>
                          </o>
                          <o>
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">123L</v>
                          </o>
                          <o>
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">124L</v>
                          </o>
                          <o>
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">125L</v>
                          </o>
                          <o>
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">126L</v>
                          </o>
                          <o>
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">127L</v>
                          </o>
                          <o>
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">128L</v>
                          </o>
                          <o>
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">true</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">129L</v>
                          </o>
                        </l2>
                      </o>
                      <o n="Flags" t="Flags">
                        <v n="Flags">0</v>
                        <v n="Fixed">true</v>
                        <v n="Extensible">false</v>
                      </o>
                      <n n="InputFlags" />
                      <l2 n="InputItems">
                        <o t="BoxTreeBox">
                          <v n="BoxType">"FB_ButtonBox"</v>
                          <o n="Instance" t="Operand">
                            <v n="Operand">"fbButtonBox"</v>
                            <v n="Type">"FB_ButtonBox"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">true</v>
                            <v n="Id">159L</v>
                          </o>
                          <o n="OutputItems" t="OutputItemList">
                            <l2 n="OutputItems" cet="Operand">
                              <n />
                              <o>
                                <v n="Operand">"OUT.BOX_OUT[1]"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">true</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">9L</v>
                              </o>
                              <o>
                                <v n="Operand">""</v>
                                <n n="Type" />
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">true</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">50L</v>
                              </o>
                              <o>
                                <v n="Operand">""</v>
                                <n n="Type" />
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">true</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">51L</v>
                              </o>
                            </l2>
                          </o>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">true</v>
                            <v n="Extensible">false</v>
                          </o>
                          <n n="InputFlags" />
                          <l2 n="InputItems" cet="BoxTreeOperand">
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"IN.BOX_IN[1]"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">11L</v>
                              </o>
                              <v n="Id">10L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"IN.BOX_IN[2]"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">13L</v>
                              </o>
                              <v n="Id">12L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"IN.BOX_IN[3]"</v>
                                <v n="Type">"BOOL"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">15L</v>
                              </o>
                              <v n="Id">14L</v>
                            </o>
                            <o>
                              <o n="Operand" t="Operand">
                                <v n="Operand">"fbMotorControl.iStatus"</v>
                                <v n="Type">"INT"</v>
                                <v n="Comment">""</v>
                                <v n="SymbolComment">""</v>
                                <v n="Address">""</v>
                                <o n="Flags" t="Flags">
                                  <v n="Flags">0</v>
                                  <v n="Fixed">false</v>
                                  <v n="Extensible">false</v>
                                </o>
                                <v n="LValue">false</v>
                                <v n="Boolean">false</v>
                                <v n="IsInstance">false</v>
                                <v n="Id">158L</v>
                              </o>
                              <v n="Id">157L</v>
                            </o>
                          </l2>
                          <o n="InputParam" t="ParamList">
                            <l2 n="Names" cet="String">
                              <v>iInput1</v>
                              <v>iInput2</v>
                              <v>iInput3</v>
                              <v>nState</v>
                            </l2>
                            <l2 n="Types" cet="String">
                              <v>BOOL</v>
                              <v>BOOL</v>
                              <v>BOOL</v>
                              <v>INT</v>
                            </l2>
                          </o>
                          <o n="OutputParam" t="ParamList">
                            <l2 n="Names" cet="String">
                              <v>Q</v>
                              <v>oLight1</v>
                              <v>Fast</v>
                              <v>Faster</v>
                            </l2>
                            <l2 n="Types" cet="String">
                              <v>BOOL</v>
                              <v>BOOL</v>
                              <v>BOOL</v>
                              <v>BOOL</v>
                            </l2>
                          </o>
                          <v n="CallType" t="Operator">FunctionBlock</v>
                          <v n="EN">false</v>
                          <v n="ENO">false</v>
                          <n n="STSnippet" />
                          <v n="ContainsExtensibleInputs">false</v>
                          <v n="ProvidesSTSnippet">false</v>
                          <v n="Id">160L</v>
                        </o>
                        <o t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">"General.ReadyForAction"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">131L</v>
                          </o>
                          <v n="Id">130L</v>
                        </o>
                        <o t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">"fbButtonBox.Fast"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">133L</v>
                          </o>
                          <v n="Id">132L</v>
                        </o>
                        <o t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">"fbButtonBox.Faster"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">135L</v>
                          </o>
                          <v n="Id">134L</v>
                        </o>
                        <o t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">150L</v>
                          </o>
                          <v n="Id">149L</v>
                        </o>
                        <o t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">""</v>
                            <n n="Type" />
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">152L</v>
                          </o>
                          <v n="Id">151L</v>
                        </o>
                      </l2>
                      <o n="InputParam" t="ParamList">
                        <l2 n="Names" cet="String">
                          <v>Run</v>
                          <v>Ready</v>
                          <v>Fast</v>
                          <v>Faster</v>
                          <v>VFD_Running</v>
                          <v>VFD_Ready</v>
                        </l2>
                        <l2 n="Types" cet="String">
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                        </l2>
                      </o>
                      <o n="OutputParam" t="ParamList">
                        <l2 n="Names" cet="String">
                          <v>Q</v>
                          <v>RUN_Order_VFD</v>
                          <v>Fast_VFD</v>
                          <v>Faster_VFD</v>
                          <v>iRounds</v>
                          <v>iRoundsMinute</v>
                          <v>Gato</v>
                          <v>Perro</v>
                          <v>GatoCount</v>
                          <v>PerroCount</v>
                          <v>iStatus</v>
                          <v>iFault</v>
                        </l2>
                        <l2 n="Types" cet="String">
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>INT</v>
                          <v>INT</v>
                          <v>BOOL</v>
                          <v>BOOL</v>
                          <v>INT</v>
                          <v>INT</v>
                          <v>INT</v>
                          <v>INT</v>
                        </l2>
                      </o>
                      <v n="CallType" t="Operator">FunctionBlock</v>
                      <v n="EN">false</v>
                      <v n="ENO">false</v>
                      <n n="STSnippet" />
                      <v n="ContainsExtensibleInputs">false</v>
                      <v n="ProvidesSTSnippet">false</v>
                      <v n="Id">179L</v>
                    </o>
                  </l2>
                  <l2 n="Connectors" />
                  <v n="Id">6L</v>
                </o>
                <o>
                  <v n="ILActive">false</v>
                  <v n="FBDValid">false</v>
                  <v n="ILValid">false</v>
                  <l2 n="ILLines" />
                  <v n="Comment">""</v>
                  <v n="Title">""</v>
                  <v n="Label">""</v>
                  <v n="OutCommented">false</v>
                  <l2 n="NetworkItems" />
                  <l2 n="Connectors" />
                  <v n="Id">5L</v>
                </o>
              </l2>
              <v n="BranchCounter">0</v>
              <v n="ValidIds">true</v>
            </o>
          </Data>
          <TypeList>
            <Type n="Boolean">System.Boolean</Type>
            <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
            <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
            <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
            <Type n="Int32">System.Int32</Type>
            <Type n="Int64">System.Int64</Type>
            <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
            <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
            <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
            <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
            <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
            <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
            <Type n="String">System.String</Type>
          </TypeList>
        </XmlArchive>
      </NWL>
    </Implementation>
  </POU>
</TcPlcObject>